--- a/static/base.css
+++ b/static/base.css
@@ -32,14 +32,16 @@ a:hover {
 #progressBarHolder {
   width: 100%;
   background-color: #ddd;
+  border-radius: 10px;
 }
 
 #progressBar {
   width: 1%;
-  height: 30px;
-  background-color: #04AA6D;
+  height: 20px;
+  background-color: #04b032;
   margin-top: 20px;
   margin-bottom: 20px;
+  border-radius: 10px;
 }
 
 /********************** SEARCH PAGE **********************/
