--- a/bookquery/templates/bookquery/results.html
+++ b/bookquery/templates/bookquery/results.html
@@ -206,11 +206,12 @@
               if (resp.data.error) {
                 this.error = true;
               }
-              this.detail = resp.data.detail
-              this.searchOngoing = false
-              this.searchComplete = true
-              this.selectedBookTitle = ""
-              this.selectedBookExtension = ""
+              this.detail = resp.data.detail;
+              this.searchOngoing = false;
+              this.searchComplete = true;
+              this.selectedBookTitle = "";
+              this.selectedBookExtension = "";
+              this.progressIndex = 0;
 
             }).catch((error) => {
               if(error) {
@@ -220,10 +221,11 @@
                 this.detail = "Something went wrong. If you were waiting for more than 5 minutes before this message, check your Kindle, the book may already be there."
               }
               
-              this.searchOngoing = false
-              this.searchComplete = true
-              this.selectedBookTitle = ""
-              this.selectedBookExtension = ""
+              this.searchOngoing = false;
+              this.searchComplete = true;
+              this.selectedBookTitle = "";
+              this.selectedBookExtension = "";
+              this.progressIndex = 0;
             })
 
           },
@@ -244,7 +246,7 @@
           getSizeScale(size) {
             // SCALE FACTOR FOR PROGRES BAR
             var SCALE_FACTOR_KB = 65;
-            var SCALE_FACTOR_MB = 50;
+            var SCALE_FACTOR_MB = 35;
 
 
             sizeNumbers = parseFloat(size.match(/[\d\.]/g).join(''));
