--- a/bookquery/templates/bookquery/results.html
+++ b/bookquery/templates/bookquery/results.html
@@ -177,7 +177,7 @@
               Getting download link for you.         
             </div>
             <div v-if="searchComplete == true">
-              [[detail]]
+              [[localDetail]]
             </div>
             
       </button>
@@ -202,6 +202,7 @@
               selectedBookTitle: "",
               selectedBookExtension: "",
               detail: "",
+              localDetail: "",
               title: "",
               searchOngoing: false,
               searchComplete: false,
@@ -227,7 +228,7 @@
           localDownload (selectedBook) {
             this.searchOngoing = true;
             this.searchComplete = false;
-            this.detail = ""
+            this.localDetail = ""
             this.error = false;
             this.progressIndex = 0;
             let token = document.querySelector("input[name=csrfmiddlewaretoken]").value
@@ -242,7 +243,7 @@
               if (resp.data.error) {
                 this.error = true;
               }
-              this.detail = resp.data.detail;
+              this.localDetail = resp.data.detail;
               //this.detail = resp.data.download_link;
               this.downloadLink = resp.data.download_link;
               this.searchOngoing = false;
