--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -1,31 +1,29 @@
 {% load crispy_forms_tags %} {% load static %}
 
 <html>
-	<head>
-		<title>Books</title>
+  <head>
+    <title>Books</title>
 
-		<link
-			rel="stylesheet"
-			type="text/css"
-			href="{% static 'base.css' %}"
-			rel="stylesheet"
-		/>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'base.css' %}"
+      rel="stylesheet"
+    />
 
-		<link
-			href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
-			rel="stylesheet"
-		/>
-	</head>
-	<body>
-		<div class="register-box">
-			<form method="POST">
-				{% csrf_token %} {{ form|crispy }}
-				<div>
-					<button class="register-button" type="submit">
-						Sign up
-					</button>
-				</div>
-			</form>
-		</div>
-	</body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="register-box">
+      <form method="POST">
+        {% csrf_token %} {{ form|crispy }}
+        <div>
+          <button class="register-button" type="submit">Sign up</button>
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
