--- a/bookquery/templates/bookquery/results.html
+++ b/bookquery/templates/bookquery/results.html
@@ -94,9 +94,9 @@
         cursor: default;
       }
 
-      .download-button:hover {
+      /*       .download-button:hover {
         background: #ffae49;
-      }
+      } */
 
       .booktitle {
         font-weight: bold;
@@ -106,6 +106,69 @@
       .selectedbook {
         background: #8f7700 !important;
         color: black;
+      }
+
+      .resultsButtonHolder {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 1fr);
+        grid-template-rows: 1fr;
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+      }
+
+      .doloading-local {
+        animation: mymove 700ms infinite;
+        animation-direction: alternate;
+        background: #ffc26a;
+        width: 100%;
+        border-radius: 5px;
+        font-size: 20px;
+        margin-top: 20px;
+        margin-right: auto;
+        margin-left: auto;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 1px;
+        padding-bottom: 1px;
+        font-weight: bold;
+        min-height: 100px;
+        display: inline-block;
+      }
+
+      .error-local {
+        width: 100%;
+        background: #f20d0d !important;
+        border-radius: 5px;
+        font-size: 20px;
+        margin-top: 20px;
+        margin-right: auto;
+        margin-left: auto;
+        padding-left: 20px;
+        font-weight: bold;
+        min-height: 100px;
+        cursor: default;
+      }
+
+      .completed-local {
+        width: 100%;
+        background: #04b032 !important;
+        border-radius: 5px;
+        font-size: 20px;
+        margin-top: 20px;
+        margin-right: auto;
+        margin-left: auto;
+        padding-left: 20px;
+        font-weight: bold;
+        min-height: 100px;
+        cursor: default;
+      }
+
+      .localDownloadButton {
+        grid-area: 1 / 7 / 2 / 8;
+      }
+
+      .kindleDownloadButton {
+        grid-area: 1 / 1 / 2 / 7;
       }
     </style>
   </head>
@@ -162,65 +225,65 @@
         >
           <div id="progressBar"></div>
         </div>
-        <button
-          :class="getClass()"
-          v-on:click.prevent="downloadToKindle(selectedBook)"
-          type="submit"
-        >
-          <div v-if="searchOngoing == false && searchComplete == false">
-            <div v-if="selectedBookTitle.length > 0">
-              Download <span class="booktitle">[[selectedBookTitle]]</span> to
-              {{request.user.username}}'s kindle at {{request.user.email}}.
-            </div>
-            <div v-else>
-              Select a book and click here to download to
-              {{request.user.username}}'s kindle.
-            </div>
+        <div class="resultsButtonHolder">
+          <div class="kindleDownloadButton">
+            <button
+              :class="getClass()"
+              v-on:click.prevent="downloadToKindle(selectedBook)"
+              type="submit"
+            >
+              <div v-if="searchOngoing == false && searchComplete == false">
+                <div v-if="selectedBookTitle.length > 0">
+                  Download
+                  <span class="booktitle">[[selectedBookTitle]]</span> to
+                  {{request.user.username}}'s kindle at {{request.user.email}}.
+                </div>
+                <div v-else>
+                  Select a book and click here to download to
+                  {{request.user.username}}'s kindle.
+                </div>
+              </div>
+              <div
+                v-if="searchOngoing == true && searchComplete == false"
+                class="loader-container"
+              >
+                Downloading and converting book. This could take 5 minutes or
+                longer.
+              </div>
+              <div v-if="searchComplete == true">[[detail]]</div>
+            </button>
           </div>
           <div
-            v-if="searchOngoing == true && searchComplete == false"
-            class="loader-container"
+            class="localDownloadButton"
+            v-if="currentUser === `aisha` && searchCompleteLocal == false"
           >
-            Downloading and converting book. This could take 5 minutes or
-            longer.
+            <button
+              :class="getClassLocal()"
+              v-on:click.prevent="localDownload(selectedBook)"
+              type="submit"
+            >
+              <div
+                v-if="searchOngoingLocal == false && searchCompleteLocal == false"
+              >
+                <div v-if="selectedBookTitle.length > 0">
+                  Download a local copy.
+                </div>
+                <div v-else>Download selected book to computer.</div>
+              </div>
+              <div
+                v-if="searchOngoingLocal == true && searchCompleteLocal == false"
+                class="loader-container"
+              >
+                Getting download link for you.
+              </div>
+              <div v-if="searchCompleteLocal == true">[[localDetail]]</div>
+            </button>
           </div>
-          <div v-if="searchComplete == true">[[detail]]</div>
-        </button>
-        <div
-          class="localDownloadButton"
-          v-show="currentUser === `aisha` && searchCompleteLocal == false"
-        >
-          <button
-            :class="getClassLocal()"
-            v-on:click.prevent="localDownload(selectedBook)"
-            type="submit"
-          >
-            <div
-              v-if="searchOngoingLocal == false && searchCompleteLocal == false"
+          <div v-if="searchCompleteLocal == true && currentUser === `aisha`">
+            <a v-bind:href="downloadLink"
+              >Click to download [[selectedBookTitle]].</a
             >
-              <div v-if="selectedBookTitle.length > 0">
-                Download
-                <span class="booktitle">[[selectedBookTitle]]</span> locally for
-                {{user}}
-              </div>
-              <div v-else>
-                Select a book and click here to download a local copy for
-                {{user}}
-              </div>
-            </div>
-            <div
-              v-if="searchOngoingLocal == true && searchCompleteLocal == false"
-              class="loader-container"
-            >
-              Getting download link for you.
-            </div>
-            <div v-if="searchCompleteLocal == true">[[localDetail]]</div>
-          </button>
-        </div>
-        <div v-if="searchCompleteLocal == true && currentUser === `aisha`">
-          <a v-bind:href="downloadLink"
-            >Click to download [[selectedBookTitle]].</a
-          >
+          </div>
         </div>
       </div>
     </div>
@@ -376,16 +439,16 @@
             this.searchOngoingLocal == false &&
             this.searchCompleteLocal == false
           ) {
-            return "download-button"
+            return "download-button-local"
           } else if (
             this.searchOngoingLocal == true &&
             this.searchCompleteLocal == false
           ) {
-            return "doloading"
+            return "doloading-local"
           } else if (this.searchCompleteLocal == true && this.error == false) {
-            return "completed"
+            return "completed-local"
           } else if (this.searchCompleteLocal == true && this.error == true) {
-            return "error"
+            return "error-local"
           }
         },
 
