--- a/bookquery/templates/bookquery/results.html
+++ b/bookquery/templates/bookquery/results.html
@@ -236,19 +236,13 @@
               v-on:click.prevent="downloadToKindle(selectedBook)"
               type="submit"
             >
-              <div
-                v-if="searchOngoing == false && searchComplete == false && selectedBook != ``"
-              >
+              <div v-if="searchOngoing == false && searchComplete == false">
                 <div v-if="selectedBookTitle.length > 0">
                   Download
                   <span class="booktitle">[[selectedBookTitle]]</span> to
                   {{request.user.username}}'s kindle at {{request.user.email}}.
                 </div>
-                <div
-                  v-if="searchOngoing == false && searchComplete == false && selectedBook == `` && detail!= ``"
-                >
-                  You need to select a book first!
-                </div>
+
                 <div v-else>
                   Select a book and click here to download to
                   {{request.user.username}}'s kindle.
